--- a/css/styles.css
+++ b/css/styles.css
@@ -253,10 +253,13 @@ main p {
   text-align: center;
   margin: 0.5em 0 10px 0.5em;
 }
-.homelink {
+.homelink-container {
+  margin-top: 0.5em;
+}
+#homelink {
   text-align: left;
-  color: #cee2d9;
-  margin: 0.5em 0 0 0.5em;
+  color: #3a6351;
+  margin: 0.75em 0 0 0.5em;
   line-height: 1em;
   font-weight: lighter;
   font-size: 1.5em;
@@ -287,11 +290,12 @@ section img {
   filter: grayscale(90%);
 }
 .about-img {
+  background-image: url("../images/meCropped.jpg");
+  background-size: cover;
+  background-position: center;
   margin: 0;
   width: 100%;
   height: 300px;
-  object-fit: cover;
-  object-position: 100% 28%;
   animation-name: fade-in;
   animation-duration: 3s;
 }
