--- a/css/styles.css
+++ b/css/styles.css
@@ -258,8 +258,7 @@ main p {
 }
 #homelink {
   text-align: left;
-  color: #3a6351;
-  margin: 0.75em 0 0 0.5em;
+  margin: 0.75em 0 0 15px;
   line-height: 1em;
   font-weight: lighter;
   font-size: 1.5em;
@@ -377,6 +376,23 @@ section img {
   grid-area: 4 / 1 / 8 / 2;
   background-color: #3a6351;
   height: 500px;
+}
+.project-description p {
+  color: white;
+  font-size: 1em;
+  margin: 0;
+  text-align: center;
+}
+.arrows {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 3em 0 3em;
+}
+.arrows p {
+  color: #3a6351;
+  font-size: 2em;
+  margin: 1em 2em 1em 2em;
 }
 div.footer {
   display: flex;
@@ -619,27 +635,35 @@ section.social-icons p a {
   .email {
     font-size: 3.8em;
   }
+  .projects-container {
+    display: flex;
+    justify-content: center;
+    margin: 3em 0 3em 0;
+  }
   .projectX {
     margin: 0 2em 0 2em;
-    grid-template-rows: 4fr;
-    grid-template-columns: 6fr;
+    grid-template-columns: 50ch;
   }
   .project-img-slide {
-    grid-area: 1 / 3 / 4 / 6;
+    grid-area: 1 / 2 / 4 / 12;
     background-image: url(https://placekitten.com/750/750);
-    width: 750px;
+    width: 500px;
     height: 100%;
   }
   .project-title {
-    grid-area: 1 / 1 / 2 / 3;
+    grid-area: 1 / 1 / 2 / 2;
   }
   .project-title-fade {
-    grid-area: 1 / 1 / 2 / 3;
+    grid-area: 1 / 1 / 2 / 2;
     -webkit-mask-image: linear-gradient(to top, #3a6351 100%, #3a6351 100%);
   }
   .project-description {
-    grid-area: 2 / 1 / 4 / 3;
-    text-align: center;
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .project-description p {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
 @media screen and (min-width: 1400px) {
@@ -668,6 +692,12 @@ section.social-icons p a {
   }
   .about-img {
     height: 600px;
+  }
+  .project-img-slide {
+    grid-area: 1 / 3 / 4 / 12;
+    background-image: url(https://placekitten.com/750/750);
+    width: 750px;
+    height: 100%;
   }
 }
 @media screen and (min-width: 1708px) {
