--- a/css/styles.css
+++ b/css/styles.css
@@ -301,16 +301,23 @@ section img {
 }
 .contact-info {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 600px;
   margin: 1.5em;
 }
+.contact-p {
+  font-size: 2em;
+  margin: 0;
+  animation-name: load-in;
+  animation-duration: 1s;
+}
 .email {
   color: #3a6351;
   margin: 1em 0 1em 0;
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.25em;
   font-weight: bolder;
   text-decoration: underline;
   animation-name: load-in;
@@ -335,6 +342,7 @@ section img {
   height: 375px;
   grid-area: 1 / 1 / 4 / 2;
   background-size: cover;
+  background-position: center;
 }
 .project-title-fade {
   background-color: #3a6351;
@@ -436,17 +444,17 @@ section.social-icons p a {
 @media screen and (min-width: 600px) {
   #menuToggler{
     right: 1em;
-    height: 1em;
+    height: 1.5em;
     width: 2em;
   }
   #menuToggler div {
-    height: 15%;
+    height: 15;
   }
   #menuToggler.open div:nth-child(1){
-    transform: translateY(0.25em) rotate(180deg);
+    transform: translateY(0.365em) rotate(180deg);
   }
   #menuToggler.open div:nth-child(2){
-    transform: translateY(-0.25em) rotate(-180deg);
+    transform: translateY(-0.365em) rotate(-180deg);
   }
   nav div {
     width: 50%;
@@ -529,16 +537,12 @@ section.social-icons p a {
   .sub-title {
     margin: 0 0.5em 0.5em 0.5em;
   }
-  section.nav-bar {
+  .nav-bar {
     margin: 0.5em;
   }
   nav {
-    font-weight: 100;
     font-size: 20px;
-    letter-spacing: 0.25em;
-    display: flex;
     flex-direction: row;
-    text-align: center;
     position: static;
     background-color: rgb(137,207,240, 0);
     transform: none;
