Removed the cats, added content. Finalised some other elements.

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@
 }
 @keyframes slide-down {
   from {
-    transform: translateY(-100%);
+    transform: translateY(-10%);
     opacity: 0;
   }
   100% {
@@ -269,10 +269,18 @@ main p {
 }
 .project-img{
   filter: grayscale(90%);
-  background-image: url(https://placekitten.com/720/720);
   background-size: cover;
+  background-position: center;
+  image-rendering: pixelated;
   margin: 1em;
   height: 85%;
+}
+.project-img.one {
+  background-image: url("../images/museumGameImgOne.jpg");
+}
+.project-img.two {
+  background-image: url("../images/webDesignProject.jpg");
+  image-rendering: unset;
 }
 section img {
   margin: 0;
@@ -290,7 +298,6 @@ section img {
 }
 .about-description {
   width: 100%;
-  margin: 0.5em;
   animation-name: fade-in;
   animation-duration: 3s;
 }
@@ -298,6 +305,43 @@ section img {
   letter-spacing: -0.025em;
   animation-name: slide-left;
   animation-duration: 2s;
+}
+.about-project-link {
+  text-decoration: underline;
+}
+.about-border {
+  margin: 3em 0 3em 0;
+  align-self: center;
+  background-color: #3a6351;
+  width: 75%;
+  height: 2px;
+}
+.currently-reading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.c-r-container {
+  margin: 1em 0 1em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.c-r-header {
+  font-size: 1.75em;
+}
+.c-r-img {
+  width: 200px;
+  height: 290px;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+}
+.c-r-title {
+  margin: 0;
+}
+.c-r-author {
+  margin: 0;
 }
 .contact-info {
   display: flex;
@@ -310,6 +354,7 @@ section img {
 .contact-p {
   font-size: 2em;
   margin: 0;
+  text-align: center;
   animation-name: load-in;
   animation-duration: 1s;
 }
@@ -343,10 +388,11 @@ section img {
   grid-area: 1 / 1 / 4 / 2;
   background-size: cover;
   background-position: center;
+  image-rendering: pixelated;
 }
 .project-title-fade {
   background-color: #3a6351;
-  height: 75px;
+  height: 95px;
   grid-area: 3 / 1 / 4 / 2;
   -webkit-mask-image: linear-gradient(to top, black 0%, transparent 100%);
   mask-image: linear-gradient(to top, black 0%, transparent 100%);
@@ -357,9 +403,6 @@ section img {
   z-index: 2;
 }
 .project-description {
-  color: white;
-  font-size: 1.25em;
-  margin: 0;
   padding: 0.5em;
   grid-area: 4 / 1 / 8 / 2;
   background-color: #3a6351;
@@ -368,44 +411,24 @@ section img {
 .project-description p {
   color: white;
   font-size: 1em;
-  margin: 0;
+  margin: 10px;
+  text-align: left;
+}
+.dotnum {
+  color: #f2edd7;
   text-align: center;
 }
-.arrows {
+.nav-dot {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  margin: 3em;
-  padding: 0 2em 0 2em;
+  justify-content: center;
 }
-.arrows p {
-  color: #3a6351;
-  font-size: 2em;
-  margin: 1em 2em 1em 2em;
-}
-.l-top {
-  height: 3px;
-  width: 30px;
-  background: #3a6351;
-  transform: translateY(-0.5em) rotate(-45deg);
-}
-.l-bottom {
-  height: 3px;
-  width: 30px;
-  background: #3a6351;
-  transform: translateY(0.5em) rotate(45deg);
-}
-.r-top {
-  height: 3px;
-  width: 30px;
-  background: #3a6351;
-  transform: translateY(-0.5em) rotate(45deg);
-}
-.r-bottom {
-  height: 3px;
-  width: 30px;
-  background: #3a6351;
-  transform: translateY(0.5em) rotate(-45deg);
+.dot {
+  margin: 2em;
+  background-color: #3a6351;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
 }
 div.footer {
   display: flex;
@@ -437,6 +460,13 @@ section.social-icons p {
 section.social-icons p a {
   color: #cee2d9;
   text-decoration: none;
+}
+.github {
+  width: 40px;
+  height: 40px;
+  background-image: url("../images/GitHub-Mark-64px.png");
+  background-size: cover;
+  background-position: center;
 }
 
 /* TABLET STYLES */
@@ -485,6 +515,9 @@ section.social-icons p a {
   .project-segment {
     height: 500px;
   }
+  .project-description p {
+    font-size: 20px;
+  }
   h3 {
     font-size: 2em;
   }
@@ -495,6 +528,10 @@ section.social-icons p a {
     font-size: 3em;
   }
   .about-description p {
+    font-size: 1.5em;
+  }
+  .c-r-title {
+    margin: 0;
     font-size: 1.5em;
   }
   .email {
@@ -619,17 +656,46 @@ section.social-icons p a {
   }
   .project-img:hover {
     transform: translateY(-0.36em);
-    opacity: 0.7;
+    filter: grayscale(0);
+    opacity: 0.9;
+  }
+  .top-about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    float: none;
+    margin: 0 auto 2em auto;
+    flex-direction: row;
   }
   .about-img {
     align-self: center;
-    width: 80%;
+    width: 50%;
     height: 500px;
+    margin: 0.5em;
   }
   .about-description {
-    width: 80%;
-    align-self: center;
+    width: 40%;
+    height: 500px;
+    align-self: baseline;
     margin: 0.5em;
+  }
+  .about-description h2 {
+    animation-name: slide-right;
+  }
+  p.about {
+    margin: 1.5em 0 1.5em 0;
+  }
+  .currently-reading {
+    margin-top: 2em;
+  }
+  .currently-reading-container {
+    margin-top: 1em;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .c-r-title {
+    margin: 0;
+    color: black;
   }
   .email {
     font-size: 3.8em;
@@ -642,6 +708,8 @@ section.social-icons p a {
   .projectX {
     margin: 0 2em 0 2em;
     grid-template-columns: 50ch;
+    animation-name: slide-down;
+    animation-duration: 0.8s;
   }
   .project-img-slide {
     grid-area: 1 / 2 / 4 / 12;
@@ -661,8 +729,7 @@ section.social-icons p a {
   }
   .project-description p {
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    margin: 1em 0 1em 0;
   }
 }
 @media screen and (min-width: 1400px) {
@@ -691,6 +758,16 @@ section.social-icons p a {
   }
   .about-img {
     height: 600px;
+  }
+  .currently-reading {
+    margin-top: 3em;
+  }
+  .c-r-header {
+    font-size: 2em;
+    margin-left: 60px;
+  }
+  .currently-reading-container {
+    margin: 3em 2em 0 2em;
   }
   .project-img-slide {
     grid-area: 1 / 3 / 4 / 12;
