Added the new index project image

--- a/css/styles.css
+++ b/css/styles.css
@@ -283,6 +283,9 @@ main p {
   background-image: url("../images/webDesignProject.jpg");
   image-rendering: unset;
 }
+.project-img.three {
+  background-image: url("../images/agileTeamDevelopment.jpg");
+}
 .about-img {
   background-image: url("../images/meCropped.jpg");
   background-size: cover;
